--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,39 @@
-/* You can add global styles to this file, and also import other style files */
+// Google Font
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Rubik", sans-serif !important;
+  user-select: none;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+input,
+button {
+  border: none;
+  outline: none;
+}
+
+.container-fluid {
+  @media (width <= 767px) {
+    padding: 0 43px;
+  }
+}
