--- a/src/app/pages/home/components/why-dubai/why-dubai.component.html
+++ b/src/app/pages/home/components/why-dubai/why-dubai.component.html
@@ -4,8 +4,8 @@
 
     <img src="../../../../../assets/images/whyDubai-main-bg.svg" alt="" class="main-bg position-absolute">
     <div class="container-fluid position-relative z-2">
-        <article class="main-content">
-            <header>
+        <article #mainContent class="main-content">
+            <header class="header">
                 <h1 class="m-0 text-center">{{ 'WHY_DUBAI.TITLE' | translate }}</h1>
             </header>
             <div class="card mx-auto mb-4 mb-lg-5 p-3 p-lg-4 text-light">
