--- a/src/app/pages/home/components/why-dubai/why-dubai.component.html
+++ b/src/app/pages/home/components/why-dubai/why-dubai.component.html
@@ -22,7 +22,7 @@
                     class="wraper mx-auto d-inline-flex flex-wrap justify-content-center align-items-center row-gap-3 row-gap-md-5 column-gap-lg-4 position-relative">
                     <img src="../../../../../assets/images/whyDubai-circle-bg.svg" alt="" class="position-absolute">
                     <div class="detail one position-relative">
-                        <p class="mt-0">{{ 'WHY_DUBAI.FREEZONES' | translate }}</p>
+                        <p class="mt-0 position-relative z-3">{{ 'WHY_DUBAI.FREEZONES' | translate }}</p>
                         <img src="../../../../../assets/images/card-bg.svg" alt="" class="bg position-absolute">
                     </div>
                     <div class="detail two">
